mule-user-guide/v/3.2/jms-transport-reference.adoc
=  JMS传输参考

== 介绍

http://java.sun.com/products/jms/docs.html[JMS（Java消息服务）]是 http://en.wikipedia.org/wiki/Message_Oriented_Middleware[面向消息的中间件]广泛使用的API。它允许分布式应用程序的不同组件之间的通信松耦合，可靠和异步。

JMS支持两种消息传递模式：

*Queues*  - 点对点
*Topics*  - 发布和订阅

Mule的JMS传输允许您轻松地发送和接收消息到任何实现JMS规范的消息服务的队列和主题。

== 命名空间和语法

XML名称空间：

[source, xml, linenums]
----
xmlns:jms "http://www.mulesoft.org/schema/mule/jms"
----

XML模式位置：

[source, code, linenums]
----
http://www.mulesoft.org/schema/mule/jms/3.2/mule-jms.xsd
----

http://www.mulesoft.org/docs/site/3.3.0/schemadocs/schemas/mule-jms_xsd/schema-overview.html[模式结构]

连接器语法：

[source, xml, linenums]
----
<jms:connector name="myConnector" specification="1.1" connectionFactory-ref="myConnectionFactory" username="myuser" password="mypass"/>
----

端点语法：

[source, xml, linenums]
----
<jms:outbound-endpoint queue="my.queue"/><jms:inbound-endpoint topic="my.topic"/>
----

== 注意事项

在点对点或排队模型中，发送者将消息发送到特定队列，接收者从队列中读取消息。在这里，发送者知道消息的目的地并将消息直接发送到接收者队列。它的特点如下：

* 只有一位消费者获得该消息
* 生产者不必在消费者使用消息时运行，消费者在消息发送时也不需要运行
* 消费者确认每个成功处理的消息

发布/订阅模型支持将消息发布到特定的消息主题。订阅者可以注册关于接收关于特定消息主题的消息的兴趣。在这个模型中，发布者和订阅者都不了解对方。一个很好的比喻是匿名公告牌。以下是这款机型的特点：

* 多个使用者（或无）将收到此讯息
* 发布者和订阅者之间存在时间依赖关系。发布者必须为客户订阅消息主题。
* 订阅者必须始终保持活动才能接收邮件，除非它建立了持久订阅。在这种情况下，当用户未连接时发布的消息将在重新连接时重新分配。

== 特点

* 支持两种版本的JMS规范：1.0.2b和1.1
* 支持队列和主题，持久或非持久订阅
* 可以通过JNDI查找ConnectionFactory和Queues / Topics
* 支持本地（JMS），分布式（XA）和多资源
* 与各种JMS提供商进行测试
* 适用于热门提供商的供应商特定配置

要查看运行中使用Mule的JMS（使用ActiveMQ），请查看 link:/mule-user-guide/v/3.2/error-handler-example[错误处理程序示例]（在完整的Mule发行版中可用）。

[TIP]
====
*WebSphere MQ*

Mule Enterprise包含一个 link:/mule-user-guide/v/3.2/mule-wmq-transport-reference[针对WebSphereMQ的增强传输]，如果您使用WebSphereMQ作为您的JMS提供程序，那么建议您使用它。
====

[TIP]
====
*Mule MQ*

如果您尝试为您的Mule应用程序选择JMS提供程序，那么您可以考虑哪些是由MuleSoft官方支持的企业级JMS实现。
====

== 用法

=== 声明名称空间

要使用JMS传输，您必须首先在您的Mule配置文件的标头中声明JMS命名空间。然后您可以配置JMS连接器和端点。

*JMS namespace*

[source, xml, linenums]
----
<mule ...cut...   xmlns:jms="http://www.mulesoft.org/schema/mule/jms"   xsi:schemaLocation=" ...cut...     http://www.mulesoft.org/schema/mule/jms http://www.mulesoft.org/schema/mule/jms/3.2/mule-jms.xsd">
----

=== 配置连接器

连接器上有几个可用属性，其中大部分属于可选项。有关完整信息，请参阅下面的架构文档。

*Connector attributes*

[source, xml, linenums]
----
<jms:connector name="myConnector"               acknowledgementMode="DUPS_OK_ACKNOWLEDGE"               clientId="myClient"               durable="true"               noLocal="true"               persistentDelivery="true"               maxRedelivery="5"               cacheJmsSessions="true"               eagerConsumer="false"               specification="1.1"               numberOfConsumers="7"               username="myuser"               password="mypass" />
----

==== 配置ConnectionFactory

其中最重要的属性之一是`connectionFactory-ref`。这是对ConnectionFactory对象的引用，它为JMS提供者创建新的连接。该对象必须实现接口`javax.jms.ConnectionFactory`。

*ConnectionFactory*

[source, xml, linenums]
----
<spring:bean name="connectionFactory" class="com.foo.FooConnectionFactory"/><jms:connector name="jmsConnector1" connectionFactory-ref="connectionFactory" />
----

还有一些属性可以让你从JNDI上下文中查找ConnectionFactory：

*ConnectionFactory from JNDI*

[source, xml, linenums]
----
<jms:connector name="jmsConnector"    jndiInitialFactory="com.sun.jndi.ldap.LdapCtxFactory"    jndiProviderUrl="ldap://localhost:10389/"    jndiProviderProperties-ref="providerProperties"    connectionFactoryJndiName="cn=ConnectionFactory,dc=example,dc=com" />
----

=== 配置端点

==== 队列

[source, xml, linenums]
----
<jms:inbound-endpoint queue="my.queue"/><jms:outbound-endpoint queue="my.queue"/>
----

==== 主题

[source, xml, linenums]
----
<jms:inbound-endpoint topic="my.topic"/><jms:outbound-endpoint topic="my.topic"/>
----

默认情况下，Mule对某个主题的订阅是非持久性的（即，它只会在连接到主题时接收消息）。您可以通过在连接器上设置`durable`属性来使主题订阅持久。

当使用持久订阅时，JMS服务器需要一个持久名称来标识每个订阅者。默认情况下，Mule以`mule.<connector name>.<topic name>`格式生成持久名称。如果您想自己指定持久名称，则可以使用端点上的`durableName`属性来完成此操作。

*Durable Topic*

[source, xml, linenums]
----
<jms:connector name="jmsTopicConnector" durable="true"/><jms:inbound-endpoint topic="some.topic" durableName="sub1" /><jms:inbound-endpoint topic="some.topic" durableName="sub2" /><jms:inbound-endpoint topic="some.topic" durableName="sub3" />
----

[TIP]
====
*Number of consumers*

就主题而言，端点上的消费者数量将设置为1。您可以通过在连接器上设置`numberOfConcurrentTransactedReceivers`或`numberOfConsumers`来覆盖此设置。
====

=== 变压器

应用于JMS端点的默认转换器如下所示：
入站= http://www.mulesoft.org/docs/site/current/apidocs/org/mule/transport/jms/transformers/JMSMessageToObject.html[JMSMessageToObject]
response = http://www.mulesoft.org/docs/site/current/apidocs/org/mule/transport/jms/transformers/ObjectToJMSMessage.html[ObjectToJMSMessage]
outbound = http://www.mulesoft.org/docs/site/current/apidocs/org/mule/transport/jms/transformers/ObjectToJMSMessage.html[ObjectToJMSMessage]

这些会自动转换为标准JMS消息类型或从标准JMS消息类型

[source, code, linenums]
----
javax.jms.TextMessage - java.lang.Stringjavax.jms.ObjectMessage - java.lang.Objectjavax.jms.BytesMessage - byte[]javax.jms.MapMessage - java.util.Mapjavax.jms.StreamMessage - java.io.InputStream
----

=== 从JNDI查找JMS对象

如果您已在连接器上配置了JNDI上下文，则还可以使用jndiDestinations属性通过JNDI查找队列/主题。如果无法通过JNDI找到队列/主题，则将使用现有的JMS会话创建队列/主题，除非您还设置了forceJndiDestinations属性。

有两种不同的方式来配置JNDI设置：

. 使用连接器属性（不建议使用）：

[source, xml, linenums]
----
<jms:connector name="jmsConnector"    jndiInitialFactory="com.sun.jndi.ldap.LdapCtxFactory"    jndiProviderUrl="ldap://localhost:10389/"    connectionFactoryJndiName="cn=ConnectionFactory,dc=example,dc=com"    jndiDestinations="true"    forceJndiDestinations="true"/>
----

. 使用JndiNameResolver
JndiNameResolver使用JNDI按名称定义查找对象的策略。该策略包含一个接收名称并返回与该名称关联的对象的查找方法。

目前，该接口有两个简单的实现：

*SimpleJndiNameResolver*：使用JNDI上下文实例来搜索名称。该实例在名称解析器的完整生命周期中保持打开状态。

*CachedJndiNameResolver*：使用简单的缓存来存储以前解析的名称。为每个发送到JNDI服务器的请求创建一个JNDI上下文实例，然后释放该实例。可以清除缓存，重新启动名称解析器。

默认JNDI名称解析器示例：使用default-jndi-name-resolver标记定义名称解析器，然后向其添加适当的属性。

[source, xml, linenums]
----
<jms:activemq-connector name="jmsConnector"                            jndiDestinations="true"                            connectionFactoryJndiName="ConnectionFactory">        <jms:default-jndi-name-resolver                jndiInitialFactory="org.apache.activemq.jndi.ActiveMQInitialContextFactory"                jndiProviderUrl="vm://localhost?broker.persistent=false&amp;broker.useJmx=false"                jndiProviderProperties-ref="providerProperties"/>    </jms:activemq-connector>
----

*Custom JNDI name resolver example*：使用custom-jndi-name-resolver标记定义名称解析器，然后使用Spring的属性格式添加适当的属性值。

[source, code, linenums]
----
    <jms:activemq-connector name="jmsConnector"                            jndiDestinations="true"                            connectionFactoryJndiName="ConnectionFactory">        <jms:custom-jndi-name-resolver class="org.mule.transport.jms.jndi.CachedJndiNameResolver">            <spring:property name="jndiInitialFactory" value="org.apache.activemq.jndi.ActiveMQInitialContextFactory"/>            <spring:property name="jndiProviderUrl"                             value="vm://localhost?broker.persistent=false&amp;broker.useJmx=false"/>            <spring:property name="jndiProviderProperties" ref="providerProperties"/>        </jms:custom-jndi-name-resolver>    </jms:activemq-connector>
----

===  JmsConnector中的更改

JmsConnector定义中有一些属性更改。一些属性现在已被弃用，因为它们应该在JndiNameResolver中定义，然后在JmsConnector中使用该JndiNameResolver。

JmsConnector中的弃用属性：

*  jndiContext
*  jndiInitialFactory
*  jndiProviderUrl
*  jndiProviderProperties-REF

新增财产：

*  jndiNameResolver：用于设置适当的JndiNameResolver。可以使用JmsConnector定义中的default-jndi-name-resolver或custom-jndi-name-resolver标记进行设置。

===  JMS选择器

您可以将JMS选择器设置为入站端点上的过滤器。 JMS选择器只需在JMS使用者上设置过滤器表达式。

*JMS Selector*

[source, xml, linenums]
----
<jms:inbound-endpoint queue="important.queue">    <jms:selector expression="JMSPriority=9"/></jms:inbound-endpoint>
----

===  JMS标题属性

一旦Mule接收到JMS消息，标准的JMS头如`JMSCorrelationID`和`JMSRedelivered`就可以作为MuleMessage对象的属性使用。

*Retrieving JMS Headers*

[source, code, linenums]
----
String corrId = (String) muleMessage.getProperty("JMSCorrelationID");boolean redelivered =  muleMessage.getBooleanProperty("JMSRedelivered");
----

您可以用相同的方式访问消息上的任何自定义标题属性。

=== 配置事务轮询

JMS传输的企业版本可以使用`TransactedPollingJmsMessageReceiver`进行事务性轮询配置。

*Transactional Polling*

[source, xml, linenums]
----
<jms:connector ...cut...>     <service-overrides transactedMessageReceiver="com.mulesoft.mule.transport.jms.TransactedPollingJmsMessageReceiver" /></jms:connector><jms:inbound-endpoint queue="my.queue">     <properties>          <spring:entry key="pollingFrequency" value="5000" /> ❶     </properties></jms:inbound-endpoint>
----

❶每个接收器轮询间隔5秒

== 示例配置

*Example configuration*

[source, xml, linenums]
----
<mule ...cut...  xmlns:jms="http://www.mulesoft.org/schema/mule/jms"  xsi:schemaLocation="...cut...    http://www.mulesoft.org/schema/mule/jms http://www.mulesoft.org/schema/mule/jms/3.2/mule-jms.xsd"> ❶    <spring:bean name="connectionFactory" class="com.foo.FooConnectionFactory"/>    <jms:connector name="jmsConnector" connectionFactory-ref="connectionFactory" username="myuser" password="mypass" />    <flow name="MyFlow">        <jms:inbound-endpoint queue="in" />        <component class="com.foo.MyComponent" />        <jms:outbound-endpoint queue="out" />    </flow></mule>
----

❶导入JMS模式名称空间

*Example configuration with transactions*

[source, xml, linenums]
----
<mule ...cut...  xmlns:jms="http://www.mulesoft.org/schema/mule/jms"  xsi:schemaLocation="...cut...    http://www.mulesoft.org/schema/mule/jms http://www.mulesoft.org/schema/mule/jms/3.2/mule-jms.xsd">    <spring:bean name="connectionFactory" class="com.foo.FooConnectionFactory"/>    <jms:connector name="jmsConnector" connectionFactory-ref="connectionFactory" username="myuser" password="mypass" />    <flow name="MyFlow">        <jms:inbound-endpoint queue="in">            <jms:transaction action="ALWAYS_BEGIN" /> ❶        </jms:inbound-endpoint>        <component class="com.foo.MyComponent" />        <jms:outbound-endpoint queue="out">            <jms:transaction action="ALWAYS_JOIN" /> ❶        </jms:outbound-endpoint>    </flow></mule>
----

❶本地JMS事务

*Example configuration with exception strategy*

[source, xml, linenums]
----
<mule ...cut...  xmlns:jms="http://www.mulesoft.org/schema/mule/jms"  xsi:schemaLocation="...cut...    http://www.mulesoft.org/schema/mule/jms http://www.mulesoft.org/schema/mule/jms/3.2/mule-jms.xsd">    <spring:bean name="connectionFactory" class="com.foo.FooConnectionFactory"/>    <jms:connector name="jmsConnector" connectionFactory-ref="connectionFactory" username="myuser" password="mypass" />    <flow name="MyFlow">        <jms:inbound-endpoint queue="in">            <jms:transaction action="ALWAYS_BEGIN" />        </jms:inbound-endpoint>        <component class="com.foo.MyComponent" />        <jms:outbound-endpoint queue="out">            <jms:transaction action="ALWAYS_JOIN" />        </jms:outbound-endpoint>        <default-exception-strategy>            <commit-transaction exception-pattern="com.foo.ExpectedExceptionType"/> ❶            <jms:outbound-endpoint queue="dead.letter"> ❷                <jms:transaction action="JOIN_IF_POSSIBLE" />            </jms:outbound-endpoint>        </default-exception-strategy>    </flow></mule>
----

❶将`exception-pattern="*"`设置为捕获所有异常类型
❷对错误消息实施死信队列

*Example configuration using Service*

[source, xml, linenums]
----
<mule ...cut...    <spring:bean name="connectionFactory" class="com.foo.FooConnectionFactory"/>    <jms:connector name="jmsConnector" connectionFactory-ref="connectionFactory" username="myuser" password="mypass" />    <model>        <service name="MyService"> ❶            <inbound>                <jms:inbound-endpoint queue="in" />            </inbound>            <component class="com.foo.MyComponent" />            <outbound>                <pass-through-router>                    <jms:outbound-endpoint queue="out" />                </pass-through-router>            </outbound>        </service>    </model></mule>
----

recommended推荐使用 link:/mule-user-guide/v/3.2/using-flows-for-service-orchestration[流动]的新实现，但Mule 2.x用户更熟悉`<service>`。

== 供应商特定配置

Mule Enterprise包含一个 link:/mule-user-guide/v/3.2/mule-wmq-transport-reference[针对WebSphereMQ的增强传输]，如果您使用WebSphereMQ作为您的JMS提供程序，那么建议您使用它。

Mule MQ是MuleSoft官方支持的企业级JMS实现，并且 link:/mule-user-guide/v/3.2/mulemq-integration[与Mule紧密整合]。

http://activemq.apache.org[ActiveMQ的]还广泛用于Mule，并且 link:/mule-user-guide/v/3.2/activemq-integration[简化配置]。

可以在这里找到配置其他JMS提供者的信息。请注意，这些信息可能会过时。

*  link:/mule-user-guide/v/3.2/fiorano-integration[FioranoMQ]
*  link:/mule-user-guide/v/3.2/hornetq-integration[HornetQ的]
*  link:/mule-user-guide/v/3.2/jboss-jms-integration[JBoss MQ]
*  link:/mule-user-guide/v/3.2/openjms-integration[OpenJms]
*  link:/mule-user-guide/v/3.2/open-mq-integration[打开MQ]
*  [Oracle AQ]
*  link:/mule-user-guide/v/3.2/seebeyond-jms-server-integration[SeeBeyond公司]
*  link:/mule-user-guide/v/3.2/sonicmq-integration[SonicMQ的]
*  link:/mule-user-guide/v/3.2/sun-jms-grid-integration[Sun JMS Grid]
*  link:/mule-user-guide/v/3.2/swiftmq-integration[SwiftMQ中]
*  link:/mule-user-guide/v/3.2/tibco-ems-integration[Tibco EMS]
*  link:/mule-user-guide/v/3.2/weblogic-jms-integration[WebLogic JMS]

== 配置参考

== 连接器

连接器元素配置通用连接器，用于通过JMS队列发送和接收消息。

<connector...>的{​​{0}}属性

[%header,cols="10,10,10,10,60"]
|===
| {名称{1}}输入 |必 |缺省 |说明
| connectionFactory-ref  |字符串 |否 |   |引用非连接工厂，这是非供应商JMS配置所必需的。
| redeliveryHandlerFactory-ref  |字符串 |否 |   |参考重新传送处理程序。
| acknowledgementMode  |枚举 |否 | AUTO_ACKNOWLEDGE  |使用的确认模式：AUTO_ACKNOWLEDGE，CLIENT_ACKNOWLEDGE或DUPS_OK_ACKNOWLEDGE。
| clientId  |字符串 |否 |   | JMS客户端的ID。
|耐久性 |布尔值 |否 |   |是否让所有主题订户持久。
| noLocal  |布尔值 |否 |   |如果设置为true，订阅者将不会收到由其自己的连接发布的消息。
| persistentDelivery  |布尔值 |否 |   |如果设置为true，则JMS提供程序会在发送消息时将其记录到稳定存储器中，如果交付不成功，可以恢复。如果消息在传输过程中丢失，客户认为应用程序会遇到问题，则客户会将其标记为持久消息。如果偶尔丢失的消息是可容忍的，则客户端将消息标记为非永久消息。客户使用交付模式告诉JMS提供商如何平衡消息传输可靠性/吞吐量。传送模式仅涵盖将消息传送到目的地。持续传送模式不保证在目的地保留消息，直到收到确认为止。客户应该假定消息保留策略是以管理方式设置的。消息保留策略管理从目的地到消息使用者的消息传递的可靠性。例如，如果客户的消息存储空间耗尽，则可能会丢弃由特定于站点的消息保留策略定义的一些消息。如果消息的传递模式是永久性的，并且目标具有足够的消息保留策略，则消息一定会由JMS提供程序一次性传递一次。
| honorQosHeaders  |布尔值 |否 |   |如果设置为true，则会遵守消息的QoS标头。如果为false（默认），则连接器设置将覆盖邮件标题。
| maxRedelivery  |整数 |否 |   |尝试重新传送邮件的最大次数。使用-1接受具有任何重新传送计数的邮件。
| cacheJmsSessions  |布尔值 |否 |   |是否缓存并重新使用JMS会话对象，而不是每次重新创建连接。注意：仅用于非事务性使用。
| eagerConsumer  |布尔值 |否 |   |是否在创建连接时创建使用者权限，而不是在轮询循环中使用延迟实例化。
|规范 |枚举 |否 | 1.0.2b  |要使用的JMS规范：1.0.2b（默认值）或1.1
|用户名 |字符串 |否 |   |连接的用户名
|密码 |字符串 |否 |   |连接的密码
| numberOfConsumers  |整数 |否 |   |将用于接收JMS消息的并发使用者数量。 （注意：如果你使用这个属性，你不应该配置'numberOfConcurrentTransactedReceivers'，它具有相同的效果。）
| jndiInitialFactory  |字符串 |否 |   |连接到JNDI时使用的初始工厂类。 DEPRECATED：使用jndiNameResolver-ref propertie来配置此值。
| jndiProviderUrl  |字符串 |否 |   |连接到JNDI时使用的URL。 DEPRECATED：使用jndiNameResolver-ref propertie来配置此值。
| jndiProviderProperties-ref  |字符串 |否 |   |引用包含其他提供程序属性的Map。 DEPRECATED：使用jndiNameResolver-ref propertie来配置此值。
| connectionFactoryJndiName  | string  | no  |   |从JNDI查找连接工厂时使用的名称。
| jndiDestinations  |布尔值 |否 |   |如果您想从JNDI查找队列或主题，而不是从会话。
| forceJndiDestinations  |布尔值 |否 |   |如果设置为true，则无法从JNDI检索主题或队列时Mule会失败。如果设置为false，则Mule将在JNDI查找失败时从JMS会话中创建主题或队列。
| disableTemporaryReplyToDestinations  |布尔值 |否 |   |如果设置为false（默认值），当Mule执行请求/响应调用时，自动设置为接收来自远程JMS调用的响应。
| embeddedMode  |布尔值 |否 | false  |某些应用程序服务器（如WebSphere AS）不允许在JMS对象上调用某些方法，有效限制可用功能。嵌入模式告诉骡子尽可能避免这些。默认为false。
|===

<connector...>的{​​{0}}子元素

[%header,cols="3*",width=90%]
|===
| {名称{1}}基数 |说明
| abstract-jndi-name-resolver  | 0..1  | jndi-name-resolver策略元素的占位符。
|===

== 自定义连接器

自定义连接器元素配置用于通过JMS队列发送和接收消息的自定义连接器。

== 入站端点

入站端点元素配置接收JMS消息的端点。

<inbound-endpoint...>的{​​{0}}属性

[%header,cols="10,10,10,10,60",width=90%]
|===
| {名称{1}}输入 |必 |缺省 |说明
|持久名称 |字符串 |否 |   |（从2.2.2开始）允许指定持久主题订阅的名称。
|队列 |字符串 |否 |   |队列名称。该属性不能与主题属性一起使用（两者是独占的）。
|主题 |字符串 |否 |   |主题名称。 "topic:"前缀将自动添加。该属性不能与队列属性一起使用（两者是独占的）。
| disableTemporaryReplyToDestinations  |布尔值 |否 |   |如果设置为false（默认值），当Mule执行请求/响应调用时，自动设置为接收来自远程JMS调用的响应。
|===

<inbound-endpoint...>的{​​{0}}子元素

[%header,cols="3*",width=10%]
|===
| {名称{1}}基数 |说明
|骡：抽象-XA的事务 | 0..1  |
| {选择{1}} 0..1  |
|===

== 出站端点

入站端点元素配置JMS消息发送到的端点。

<outbound-endpoint...>的{​​{0}}属性

[%header,cols="10,10,10,10,60",width=90%]
|===
| {名称{1}}输入 |必 |缺省 |说明
|队列 |字符串 |否 |   |队列名称。该属性不能与主题属性一起使用（两者是独占的）。
|主题 |字符串 |否 |   |主题名称。 "topic:"前缀将自动添加。该属性不能与队列属性一起使用（两者是独占的）。
| disableTemporaryReplyToDestinations  |布尔值 |否 |   |如果设置为false（默认值），当Mule执行请求/响应调用时，自动设置为接收来自远程JMS调用的响应。
|===

<outbound-endpoint...>的{​​{0}}子元素

[%header,cols="3*",width=10%]
|===
| {名称{1}}基数 |说明
|骡：抽象-XA的事务 | 0..1  |
| {选择{1}} 0..1  |
|===

==  Jmsmessage到对象转换器

jmsmessage-to-object-transformer元素配置一个转换器，通过提取消息负载将JMS消息转换为对象。

无<jmsmessage-to-object-transformer...>的子元素


==  jmsmessage转换器的对象

object-to-jmsmessage-transformer元素配置一个转换器，它根据传入的对象将对象转换为五种类型的JMS消息之一：java.lang.String  - > javax.jms.TextMessage，byte []  - > javax.jms.BytesMessage，java.util.Map（原始类型） - > javax.jms.MapMessage，java.io.InputStream（或原始类型的java.util.List） - > javax.jms.StreamMessage和java。 lang.Serializable包含java.util.Map，java.util.List和java.util.Set对象，它们包含可序列化对象（包括基元） - > javax.jms.ObjectMessage。

无<object-to-jmsmessage-transformer...>的子元素


== 事务

事务元素配置一个事务。事务处理允许将一系列操作分组在一起，以便在出现故障时将它们回滚。设置操作（例如ALWAYS_BEGIN或JOIN_IF_POSSIBLE）以及事务的超时设置。

无<transaction...>的子元素


== 客户端确认交易

client-ack-transaction元素配置客户端确认事务，该事务与事务相同但带有消息确认。客户端确认没有回滚的概念，但是此事务对于控制消息从目的地消耗的方式很有用。

无<client-ack-transaction...>的子元素



== 选择

<selector...>的{​​{0}}属性

[%header,cols="10,10,10,10,60"]
|===
| {名称{1}}输入 |必 |缺省 |说明
|表达式 |字符串 |是 |   |在属性中搜索的表达式。
|===

无<selector...>的子元素



== 属性过滤器

property-filter元素配置一个过滤器，允许您根据JMS属性过滤消息。

===  XML架构

按如下所示为该模块导入XML模式：

[source, xml, linenums]
----
xmlns:jms="http://www.mulesoft.org/schema/mule/jms"xsi:schemaLocation="http://www.mulesoft.org/schema/mule/jms  http://www.mulesoft.org/schema/mule/jms/3.2/mule-jms.xsd"
----

完成 http://www.mulesoft.org/docs/site/3.3.0/schemadocs/schemas/mule-jms_xsd/schema-overview.html[模式参考文档]。

=== 的Javadoc

可以找到此传输的Javadoc http://www.mulesoft.org/docs/site/current/apidocs/org/mule/transport/jms/package-summary.html[这里]。

=== 的Maven

如果您使用Maven构建应用程序，请使用以下groupId / artifactId将此模块作为依赖项包含在内：

[source, xml, linenums]
----
<dependency>  <groupId>org.mule.transports</groupId>  <artifactId>mule-transport-jms</artifactId></dependency>
----

== 注意事项

1.0.2b规范的局限性是仅支持每个ConnectionFactory的队列或主题。如果您同时需要，请配置两个单独的连接器，一个引用`QueueConnectionFactory`，另一个引用`TopicConnectionFactory`。然后，您可以使用`connector-ref`属性消除端点的歧义。

*Workaround for 1.0.2b spec.*

[source, xml, linenums]
----
<spring:bean name="queueConnectionFactory" class="com.foo.QueueConnectionFactory"/><spring:bean name="topicConnectionFactory" class="com.foo.TopicConnectionFactory"/><jms:connector name="jmsQueueConnector" connectionFactory-ref="queueConnectionFactory" /><jms:connector name="jmsTopicConnector" connectionFactory-ref="topicConnectionFactory" /><jms:outbound-endpoint queue="my.queue1" connector-ref="jmsQueueConnector"/><jms:outbound-endpoint queue="my.queue2" connector-ref="jmsQueueConnector"/><jms:inbound-endpoint topic="my.topic" connector-ref="jmsTopicConnector"/>
----
